--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "antd": "^3.23.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
